Filtro de vehiculos en el mapa según ubicación introducida

--- a/reactapp/index.html
+++ b/reactapp/index.html
@@ -12,10 +12,14 @@
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 
-  <script async
+  <!-- <script async
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_G0xCXyALB3IgkE5D4RpWWAxRIg9xCuQ&libraries=places&callback=initMap">
-  </script>
+  </script> -->
 
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC_G0xCXyALB3IgkE5D4RpWWAxRIg9xCuQ&libraries=places&">
+  </script>
+  
 </body>
 
 </html>
